# rope-simulation

./: Cargo.toml  Readme.md
data/shaders/: color_lines.frag  draw_endpoints.geom.glsl  draw_passthrough.geom.glsl  passthrough.vert.glsl  ui.frag.glsl  ui.vert.glsl
math/: Cargo.toml
math/src/: color_conversion.rs  color_palette.rs  colormap.rs  colors.rs  lib.rs  mat2x3.rs  mat4.rs  vec2.rs  vec3.rs
rendering/: Cargo.toml
rendering/src/: lib.rs  renderer_gl.rs
rope/: Cargo.toml
rope/src/: main.rs
sys/: Cargo.toml
sys/src/: keysyms.rs  lib.rs  window_x11.rs
