[package]
name = "sys"
version = "0.1.0"
authors = ["doomguy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
# gl_loader = "0.1.2"
# gl = "0.14.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "windowsx", "memoryapi", "fileapi", "handleapi"] }

# [target.'cfg(unix)'.dependencies]
# x11 = { version = "2.18.2", features = ["xlib", "xinerama", "glx"] }
